--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ src="https://www.facebook.com/tr?id=976052084130084&ev=PageView&noscript=1"
 				<div class="elementor-element elementor-element-10bf9ed8 elementor-widget elementor-widget-heading" data-id="10bf9ed8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>
-Telefone: (21) 9510-1777<br><br>
+Telefone: (89) 3300-9260<br><br>
 E-mail: <a href="mailto:bawanahheek6@outlook.com" style="font-size: 18px">bawanahheek6@outlook.com</a><br></h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-13bd87ba elementor-widget elementor-widget-heading" data-id="13bd87ba" data-element_type="widget" data-widget_type="heading.default">
@@ -356,7 +356,7 @@ E-mail: <a href="mailto:bawanahheek6@outlook.com" style="font-size: 18px">bawana
 				<div class="elementor-element elementor-element-4ab2337 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="4ab2337" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/12997021326?text=Ol%C3%A1">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/89933009260?text=Ol%C3%A1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CONVERSAR AGORA</span>
 					</span>
@@ -386,7 +386,7 @@ Situação Cadastral: Ativa <br><br>
 Rua C At Panorama, 135 <br>
 Bairro Alto Maron, Vitória da Conquista - BA, 45005-524 <br><br>
 
-📞 Telefone: (77) 3424-6445 | (77) 99137-1777 (Whatsapp) <br>
+📞 Telefone: (89) 3300-92607 (Whatsapp) <br>
 ✉️ E-mail:
 <a href="mailto:bawanahheek6@outlook.com" style="font-size: 16px;color: white;text-decoration: none">bawanahheek6@outlook.com</a></h2>				</div>
 				</div>
